--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,8 +23,12 @@ jobs:
           version: 8
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Print versions
-        run: |
-          pnpm --version
-          npm --version
-          yarn --version
+      - name: Bump version
+        run: pnpm --recursive --filter "@samverschueren/*" exec npm version --allow-same-version ${{ inputs.version }} 
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v6
+        commit-message: "chore: bump version ${{ inputs.version }}"
+        title: "chore: bump version ${{ inputs.version }}"
+        body: "Bump packages to version ${{ inputs.version }}"
+        reviewers: SamVerschueren
+        branch: chore/bump-version
