--- a/.github/workflows/publish-pr.yaml
+++ b/.github/workflows/publish-pr.yaml
@@ -29,7 +29,7 @@ jobs:
         uses: peter-evans/create-pull-request@v6
         with:
           commit-message: "chore: release v${{ inputs.version }}"
-          title: "chore: relase v${{ inputs.version }}"
+          title: "chore: release v${{ inputs.version }}"
           body: "Bump packages to version `${{ inputs.version }}` with tag `${{ inputs.tag }}`"
           reviewers: SamVerschueren
           branch: chore/bump-version
