--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,4 @@ jobs:
         run: cat $GITHUB_EVENT_PATH
       - name: Show info
         run: |
-          echo ${{github.event.workflow_run.conclusion}}
-          echo ${{github.event.workflow_run.event}}
-          echo ${{github.event.workflow_run.workflow}}
+          echo ${{github.event}}
