--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "name": "sam-workflow-playground",
   "private": true,
-  "description": "make change somewhere else"
+  "description": "make change somewhere"
 }
